# bitcap-ipr

./: .gitignore  AGENTS.md  CLAUDE.md  CONFIGURATION.md  README.md  TRADEMARKS.md  build.py  build_linux.sh  build_win.py  builddmg.sh  ipr.desktop  package-linux.sh  package-mac.sh  package-win.py  package.sh  pyproject.toml  requirements.txt  send_udp_dgram.py  setup.iss  zlib_compress.py
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  python-app.yml  test_lm.yml
resources/app/: config.json.default
resources/linux/: bitcap-ipr.desktop  ipr.desktop
scripts/: build_linux.sh  build_win.py  pcap_dump.py  sealminer_decompress.py  send_dgram.py  send_raw_udp.py  send_udp_dgram.py  send_udp_packet.py  zlib_compress.py
setup/: setup.iss
setup/resources/linux/: ipr.desktop
src/: IPRAbout.py  IPRConfirmation.py  ListenerManager.py  MainWindow.py  asyncio_socket.py  config.py  ipr.py  ipr.spec  iprabout.py  iprconfirmation.py  iprmessage.py  iprprogress.py  main.py  util.py  utils.py
src/mod/: api.py  listener.py  listenermanager.py  lm.py  powermonitor.py
src/mod/api/: __init__.py  bitmain.py  client.py  errors.py  goldshell.py  http.py  iceriver.py  parser.py  rpc.py  sealminer.py  tcp.py  volcminer.py  whatsminer.py
src/mod/apiv2/: __init__.py  client.py  errors.py
src/mod/ipr_asic/: README.md  __init__.py  client.py  errors.py
src/mod/lm/: README.md  __init__.py  ipreport.py  listener.py  listenermanager.py
src/mod/updater/: __init__.py  updater.py
src/tests/: test_ipr_asic_bridge.py  test_ipr_asic_client.py  test_ipr_asic_http_clients.py  test_ipr_asic_parsers.py  test_ipr_asic_rpc_clients.py  test_ipr_asic_transports.py  test_ipr_miner_control.py  test_iprd_service.py  test_listeners.py  test_srbminer_parser.py  test_updater.py
src/tests/payloads/: auradine.json  goldshell.json  sealminer_a2.json  srbminer.json
src/ui/: About.py  About.ui  Confirmation.py  Confirmation.ui  GUI.py  MainWindow.py  MainWindow.ui  TitleBar.py  __init__.py  ipr.qrc  resources.py  theme.qrc  theme.qss
src/ui/forms/: about.ui  confirmation.ui  mainwindow.ui
src/ui/theme/: theme.qss
src/ui/widgets/: SvgLabel.py  TitleBar.py  __init__.py  svglabel.py  titlebar.py
src/ui/windows/: IPRAbout.py  (+1 more)
tests/: test_listeners.py  test_lm.py
(+128 files in other folders)
