[project]
name = "bitcap-ipr"
version = "1.2.8"
description = ""
authors = [{ name = "MatthewWertman", email = "matthewwertman57@gmail.com" }]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pyside6 (>=6.9.0,<7.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "platformdirs (>=4.3.7,<5.0.0)",
    "pycryptodome (>=3.22.0,<4.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
nuitka = "^2.7"
scapy = "^2.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
