[project]
name = "bitcap-ipr"
version = "1.2.10"
description = ""
authors = [{ name = "MatthewWertman", email = "matthewwertman57@gmail.com" }]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pyside6 (>=6.10.2,<7.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "platformdirs (>=4.9.4,<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
scapy = "^2.7.0"
nuitka = "^4.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
